# SPDX-FileCopyrightText: 2026 Greg Brandt <brandt.greg@gmail.com>
#
# SPDX-License-Identifier: Apache-2.0

[project]
name = "rubbernecker"
version = "0.0.8"
description = "Web scraping engine"
authors = [{ name = "Greg Brandt", email = "brandt.greg@gmail.com" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "avrokit>=0.0.7",
  "beautifulsoup4>=4.13.4",
  "seleniumbase>=4.46.4",
  "requests>=2.32.5",
]

[project.scripts]
rubbernecker = "rubbernecker.__main__:main"

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "pytest-env>=1.1.5",
  "pytest-xdist>=3.6.1",
  "pytest-cov>=6.1.1",
  "faker>=37.1.0",
  "ruff>=0.9.0",
  "ty>=0.0.1a6",
  "reuse>=6.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rubbernecker"]

[tool.pytest.ini_options]
addopts = "-m 'not integration'"
markers = ["integration: mark a test as an integration test"]
testpaths = ["tests"]

[tool.ruff]
exclude = []

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.src]
include = ["rubbernecker", "tests"]
